Solo falta enseñar las piezas capturadas

--- a/DWS/UD2/Practica/ajedrez_web/style/chess_game_styles.css
+++ b/DWS/UD2/Practica/ajedrez_web/style/chess_game_styles.css
@@ -24,4 +24,19 @@
 
 .section img {
     width: 100%;
+    position: absolute;
+    z-index: 0;
+}
+
+.White {
+    background-image: url("../img/white_section.png");
+}
+
+.Black {
+    background-image: url("../img/black_section.png");
+}
+
+.piece {
+    width: 100%;
+    z-index: 1;
 }
