--- a/DWS/UD2/Practica/ajedrez_web/style/chess_game_styles.css
+++ b/DWS/UD2/Practica/ajedrez_web/style/chess_game_styles.css
@@ -3,16 +3,40 @@
     padding: 0;
 }
 
+body {
+    background-image: url("../img/page_background.jpg");
+    background-size: cover;
+    overflow: hidden;
+    width: 100%;
+    height: 100vh;
+}
+
+#game {
+    width: 30vw;
+    margin-left: 35vw;
+    transform: translate(0, -50%);
+    margin-top: 50vh;
+}
+
 #board {
-    width: 33vw;
-    height: 33vw;
+    width: 100%;
+    height: 30vw;
     max-width: 635px;
     max-height: 635px;
-    transform: translate(-50%, -50%);
-    margin-top: 50vh;
-    margin-left: 50vw;
-    border: 5px solid rgb(201, 155, 95);
-    position: relative;
+    margin-top: 1vw;
+}
+
+#blackCatches {
+    width: 30vw;
+    height: 2vw;
+    background-color: rgba(133, 133, 133, 0.6);
+}
+
+#whiteCatches {
+    width: 100%;
+    height: 2vw;
+    margin-top: 1vw;
+    background-color: rgba(133, 133, 133, 0.6);
 }
 
 .section {
@@ -39,4 +63,14 @@
 .piece {
     width: 100%;
     z-index: 1;
+}
+
+.deathZone {
+    height: 100%;
+    width: 6.25%;
+    float: left;
+}
+
+.deathZone img {
+    width: 100%;
 }
