--- a/DWS/UD3/Practica_2/css/chess_game_styles.css
+++ b/DWS/UD3/Practica_2/css/chess_game_styles.css
@@ -3,6 +3,34 @@
     padding: 0;
 }
 
+header {
+    margin-top: 1vw;
+    margin-left: 1vw;
+    width: 98vw;
+    height: 15vh;
+    background-color: rgba(128, 104, 38, 0.9);
+    border-radius: 20px;
+}
+
+header h1 {
+    text-align: center;
+    color: bisque;
+    width: 100%;
+    height: 5vh;
+    margin-top: 1vw;
+}
+
+#buttons {
+    height: 10vw;
+}
+
+#buttons button {
+    width: 10vw;
+    height: 5vw;
+    float: right;
+    margin-right: 1vw;
+}
+
 body {
     background-image: url("../img/page_background.jpg");
     background-size: cover;
