--- a/DWS/UD3/Practica_2/css/chess_game_styles.css
+++ b/DWS/UD3/Practica_2/css/chess_game_styles.css
@@ -10,7 +10,7 @@ header {
     width: 98vw;
     height: 12vh;
     min-height: 60px;
-    background-color: #33333388;
+    background-color: #333333cc;
     border-radius: 20px;
 }
 
@@ -18,17 +18,53 @@ footer {
     width: 98vw;
     height: 12vh;
     min-height: 60px;
-    background-color: #33333388;
+    background-color: #333333cc;
     border-radius: 20px;
     position: absolute;
     left: 1vw;
     bottom: 2vh;
 }
 
+#policies_box {
+    background-color: rgba(128, 128, 128, 0.95);
+    width: 90%;
+    margin-left: 50vw;
+    margin-top: 4vh;
+    box-shadow: 0 0 10px 10px gray;
+    padding: 1vw;
+    transform: translate(-50%);
+}
+
+#policies_box h2 {
+    font-size: 1.4vw;
+}
+
+#policies_box h3 {
+    font-size: 1.1vw;
+}
+
+#policies_box p {
+    font-size: 0.75vw;
+}
+
+#config {
+    width: 2vw;
+    float: left;
+    transform: translate(0%, -50%);
+    margin-top: 6vh;
+    margin-left: 1vw;
+    cursor: pointer;
+}
+
+#config {
+    transform: translate(0%, -50%), rotate(45deg);
+    transition-duration: 500ms;
+}
+
 header h1 {
     text-align: center;
     color: bisque;
-    margin-left: 49vw;
+    margin-left: 46vw;
     margin-top: 6vh;
     transform: translate(-50%, -50%);
     display: block;
@@ -62,7 +98,7 @@ footer a {
     max-width: 100px;
     max-height: 55px;
     margin-right: 1vw;
-    background-color: burlywood;
+    background-color: bisque;
     border: 1px solid black;
     border-radius: 10px;
 }
@@ -70,9 +106,12 @@ footer a {
 body {
     background-image: url("../img/page_background.jpg");
     background-size: cover;
-    overflow: hidden;
     width: 100%;
     height: 100vh;
+}
+
+#special_body {
+    overflow: hidden;
 }
 
 #game {
