--- a/DWS/UD3/Practica_2/css/chess_game_styles.css
+++ b/DWS/UD3/Practica_2/css/chess_game_styles.css
@@ -48,17 +48,18 @@ footer {
 }
 
 #config {
-    width: 2vw;
+    width: 5vh;
+    height: 5vh;
     float: left;
-    transform: translate(0%, -50%);
-    margin-top: 6vh;
+    margin-top: 3.5vh;
     margin-left: 1vw;
     cursor: pointer;
+    transition: 2s;
 }
 
-#config {
-    transform: translate(0%, -50%), rotate(45deg);
-    transition-duration: 500ms;
+.rotate {
+    transform: rotate(90deg);
+    transition: 2s;
 }
 
 header h1 {
@@ -106,8 +107,6 @@ footer a {
 body {
     background-image: url("../img/page_background.jpg");
     background-size: cover;
-    width: 100%;
-    height: 100vh;
 }
 
 #special_body {
