--- a/DWS/UD3/Practica_2/css/chess_game_styles.css
+++ b/DWS/UD3/Practica_2/css/chess_game_styles.css
@@ -54,12 +54,12 @@ footer {
     margin-top: 3.5vh;
     margin-left: 1vw;
     cursor: pointer;
-    transition: 2s;
+    transition: 250ms;
 }
 
 .rotate {
     transform: rotate(90deg);
-    transition: 2s;
+    transition: 250ms;
 }
 
 header h1 {
@@ -70,6 +70,7 @@ header h1 {
     transform: translate(-50%, -50%);
     display: block;
     float: left;
+    cursor: default;
 }
 
 footer a {
@@ -92,21 +93,76 @@ footer a {
 }
 
 #buttons button {
-    width: 5vw;
-    height: 3vw;
-    min-width: 80px;
-    min-height: 50px;
-    max-width: 100px;
-    max-height: 55px;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
     margin-right: 1vw;
     background-color: bisque;
     border: 1px solid black;
     border-radius: 10px;
+    cursor: pointer;
+    font-size: 0.75vw;
+    text-decoration: none;
+    transition: 250ms;
+}
+
+#buttons button:hover {
+    transform: scale(110%, 110%);
+    transition: 250ms;
 }
 
 body {
     background-image: url("../img/page_background.jpg");
     background-size: cover;
+}
+
+#form {
+    border: 1px solid black;
+    border-radius: 20px 20px;
+    width: 50vw;
+    height: 50vh;
+    margin-left: 25vw;
+    margin-top: 11vh;
+    background-color: #333333cc;
+    color: white;
+}
+
+#form select {
+    transform: translate(-50%);
+    margin-left: 50%;
+}
+
+#form label {
+    display: block;
+    text-align: center;
+    width: 100%;
+    margin-top: 3vh;
+    margin-bottom: 2vh;
+}
+
+#title {
+    transform: translate(-50%);
+    margin-left: 50%;
+}
+
+#submit_button {
+    width: 8vw;
+    height: 6vh;
+    font-size: 1vw;
+    position: relative;
+    top: 8%;
+    left: 42%;
+    background-color: bisque;
+    border: 1px solid black;
+    border-radius: 20px 20px;
+    cursor: pointer;
+    transition: 250ms;
+}
+
+#submit_button:hover {
+    transform: scale(110%);
+    transition: 250ms;
 }
 
 #special_body {
