--- a/DWS/UD4/Practica_3/css/chess_game_styles.css
+++ b/DWS/UD4/Practica_3/css/chess_game_styles.css
@@ -63,15 +63,36 @@ footer {
     transition: 250ms;
 }
 
+#users {
+    width: 4vh;
+    height: 4vh;
+    float: left;
+    margin-top: 2.5vh;
+    margin-left: 2.5vw;
+    cursor: pointer;
+    border: 1px solid black;
+    padding: 1vh;
+    transform: translate(-0.5vh, -0.5vh);
+    background-color: bisque;
+    border-radius: 20%;
+    transition: 250ms;
+}
+
+#users:hover {
+    transform: scale(110%, 110%) translate(-0.5vh, -0.5vh);
+    transition: 250ms;
+}
+
 header h1 {
     text-align: center;
     color: bisque;
-    margin-left: 46vw;
-    margin-top: 5vh;
+    left: 50vw;
+    top: 7vh;
     transform: translate(-50%, -50%);
     display: block;
     float: left;
     cursor: default;
+    position: absolute;
 }
 
 footer a {
@@ -277,4 +298,40 @@ thead {
     height: 40vh;
     margin-left: 10vw;
     margin-top: 15vh;
+}
+
+.disabled {
+    opacity: 30%;
+}
+
+#user_management {
+    background-color: bisque;
+    width: 10vw;
+    height: 25vh;
+    /* display: none; */
+    position: absolute;
+    top: 15vh;
+    left: 3vw;
+    border: 2px solid black;
+    border-radius: 20%;
+}
+
+#user_management hr {
+    width: 80%;
+    margin: 0 auto;
+}
+
+#login {
+    width: 2vw;
+    display: block;
+}
+
+#register {
+    width: 2vw;
+    display: block;
+}
+
+#logout {
+    width: 2vw;
+    display: block;
 }
