--- a/DWS/UD4/Practica_3/css/chess_game_styles.css
+++ b/DWS/UD4/Practica_3/css/chess_game_styles.css
@@ -322,16 +322,69 @@ thead {
 }
 
 #login {
+    display: block;
+    height: 20%;
+    width: 80%;
+    margin: 0 auto;
+}
+
+#login img {
     width: 2vw;
     display: block;
+    float: left;
+    margin: 0 auto;
+}
+
+#login p {
+    display: block;
+    margin: 0 auto;
+    float: left;
 }
 
 #register {
-    width: 2vw;
     display: block;
+    height: 20%;
+    width: 80%;
+    margin: 0 auto;
+}
+
+#register img {
+    width: 2vw;
+    display: inline-block;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    margin-top: 16.5%;
+    margin-left: 20%;
+}
+
+#register p {
+    display: inline-block;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    margin-top: 16.5%;
+    margin-left: 45%;
 }
 
 #logout {
-    width: 2vw;
     display: block;
+    height: 20%;
+    width: 80%;
+    margin: 0 auto;
+}
+
+#logout img {
+    width: 2vw;
+    display: inline-block;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    margin-top: 16.5%;
+    margin-left: 20%;
+}
+
+#logoutp {
+    display: inline-block;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    margin-top: 16.5%;
+    margin-left: 45%;
 }
