--- a/DWS/UD4/Practica_3/css/chess_game_styles.css
+++ b/DWS/UD4/Practica_3/css/chess_game_styles.css
@@ -307,84 +307,97 @@ thead {
 #user_management {
     background-color: bisque;
     width: 10vw;
-    height: 25vh;
+    height: 23vh;
     /* display: none; */
     position: absolute;
     top: 15vh;
     left: 3vw;
     border: 2px solid black;
     border-radius: 20%;
+    transition: 250ms;
 }
 
 #user_management hr {
     width: 80%;
-    margin: 0 auto;
+    margin: 1vh auto;
 }
 
 #login {
     display: block;
-    height: 20%;
+    height: 4vh;
     width: 80%;
-    margin: 0 auto;
+    margin: 2vh auto;
+    color: black;
+}
+
+#login:hover {
+    cursor: pointer;
 }
 
 #login img {
-    width: 2vw;
+    width: 4vh;
     display: block;
     float: left;
-    margin: 0 auto;
+    margin: 0 1vw;
 }
 
 #login p {
     display: block;
-    margin: 0 auto;
     float: left;
+    line-height: 4vh;
 }
 
 #register {
     display: block;
-    height: 20%;
+    height: 4vh;
     width: 80%;
-    margin: 0 auto;
+    margin: 2vh auto;
+    color: black;
+}
+
+#register:hover {
+    cursor: pointer;
 }
 
 #register img {
-    width: 2vw;
-    display: inline-block;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    margin-top: 16.5%;
-    margin-left: 20%;
+    width: 4vh;
+    display: block;
+    float: left;
+    margin: 0 1vw;
 }
 
 #register p {
-    display: inline-block;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    margin-top: 16.5%;
-    margin-left: 45%;
+    display: block;
+    float: left;
+    line-height: 4vh;
 }
 
 #logout {
     display: block;
-    height: 20%;
+    height: 4vh;
     width: 80%;
-    margin: 0 auto;
+    margin: 2vh auto;
+    color: black;
+}
+
+#logout:hover {
+    cursor: pointer;
 }
 
 #logout img {
-    width: 2vw;
-    display: inline-block;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    margin-top: 16.5%;
-    margin-left: 20%;
+    width: 4vh;
+    display: block;
+    float: left;
+    margin: 0 1vw;
 }
 
-#logoutp {
-    display: inline-block;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    margin-top: 16.5%;
-    margin-left: 45%;
+#logout p {
+    display: block;
+    float: left;
+    line-height: 4vh;
+}
+
+.no_display {
+    transform: scaleY(0%);
+    transition: 250ms;
 }
