--- a/DWS/UD4/Practica_3/css/chess_game_styles.css
+++ b/DWS/UD4/Practica_3/css/chess_game_styles.css
@@ -63,7 +63,7 @@ footer {
     transition: 250ms;
 }
 
-#users {
+#logout {
     width: 4vh;
     height: 4vh;
     float: left;
@@ -104,7 +104,6 @@ footer a {
     display: block;
     float: left;
     text-decoration: none;
-    color: bisque;
 }
 
 #buttons {
@@ -304,100 +303,81 @@ thead {
     opacity: 30%;
 }
 
-#user_management {
-    background-color: bisque;
-    width: 10vw;
-    height: 23vh;
-    /* display: none; */
-    position: absolute;
-    top: 15vh;
-    left: 3vw;
-    border: 2px solid black;
-    border-radius: 20%;
-    transition: 250ms;
-}
-
-#user_management hr {
-    width: 80%;
-    margin: 1vh auto;
-}
-
-#login {
-    display: block;
-    height: 4vh;
-    width: 80%;
-    margin: 2vh auto;
-    color: black;
-}
-
-#login:hover {
-    cursor: pointer;
-}
-
-#login img {
-    width: 4vh;
-    display: block;
-    float: left;
-    margin: 0 1vw;
-}
-
-#login p {
-    display: block;
-    float: left;
-    line-height: 4vh;
-}
-
-#register {
-    display: block;
-    height: 4vh;
-    width: 80%;
-    margin: 2vh auto;
-    color: black;
-}
-
-#register:hover {
-    cursor: pointer;
-}
-
-#register img {
-    width: 4vh;
-    display: block;
-    float: left;
-    margin: 0 1vw;
-}
-
-#register p {
-    display: block;
-    float: left;
-    line-height: 4vh;
-}
-
-#logout {
-    display: block;
-    height: 4vh;
-    width: 80%;
-    margin: 2vh auto;
-    color: black;
-}
-
-#logout:hover {
-    cursor: pointer;
-}
-
-#logout img {
-    width: 4vh;
-    display: block;
-    float: left;
-    margin: 0 1vw;
-}
-
-#logout p {
-    display: block;
-    float: left;
-    line-height: 4vh;
+.links {
+    padding: 0;
 }
 
 .no_display {
     transform: scaleY(0%);
     transition: 250ms;
+}
+
+#login_form {
+    width: 20vw;
+    height: 40vh;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    margin-left: 50vw;
+    margin-top: 40vh;
+    border: 2px solid black;
+    border-radius: 1vw;
+    background-color: bisque;
+}
+
+#register_form {
+    width: 20vw;
+    height: 40vh;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    margin-left: 50vw;
+    margin-top: 40vh;
+    border: 2px solid black;
+    border-radius: 1vw;
+    background-color: bisque;
+}
+
+#login_form label {
+    margin: 4vh 0 1vh 0;
+    display: block;
+    font-weight: bold;
+}
+
+#register_form label {
+    margin: 2vh 0 1vh 0;
+    display: block;
+    font-weight: bold;
+}
+
+.login_form {
+    max-width: 8vw;
+    margin: 1vh 10vw;
+    transform: translate(-50%, 0);
+    display: block;
+}
+
+#psw_button {
+    cursor: pointer;
+}
+
+#form_button {
+    margin: 5vh 10vw;
+    transform: translate(-50%, 0);
+    height: 4vh;
+    width: 5vw;
+    background-color: bisque;
+    border: 2px solid black;
+    font-weight: bold;
+    border-radius: 1vw;
+}
+
+#form_button:hover {
+    cursor: pointer;
+    background-color: burlywood;
+    box-shadow: 0.25vw 0.5vh 1vh;
+}
+.register_form {
+    max-width: 8vw;
+    margin: 1vh 10vw;
+    transform: translate(-50%, 0);
+    display: block;
 }
