--- a/DWS/UD4/Practica_3/css/chess_game_styles.css
+++ b/DWS/UD4/Practica_3/css/chess_game_styles.css
@@ -14,6 +14,31 @@ header {
     border-radius: 20px;
 }
 
+#config_menu {
+    background-color: bisque;
+    width: 8vw;
+    height: 20vh;
+    padding: 1vh 0 1vh 2vw;
+    border: 1px solid black;
+    border-radius: 1vw;
+    margin-left: -1vw;
+    position: absolute;
+    transition: 250ms;
+}
+
+#config_menu ul {
+    list-style: none;
+}
+
+.hide_list {
+    display: none;
+}
+
+.config_hide {
+    transform: translate(-100%);
+    transition: 250ms;
+}
+
 footer {
     width: 98vw;
     height: 10vh;
@@ -318,7 +343,7 @@ thead {
     text-align: center;
     transform: translate(-50%, -50%);
     margin-left: 50vw;
-    margin-top: 40vh;
+    margin-top: 30vh;
     border: 2px solid black;
     border-radius: 1vw;
     background-color: bisque;
@@ -375,9 +400,41 @@ thead {
     background-color: burlywood;
     box-shadow: 0.25vw 0.5vh 1vh;
 }
+
 .register_form {
     max-width: 8vw;
     margin: 1vh 10vw;
     transform: translate(-50%, 0);
     display: block;
+}
+
+#register_message {
+    width: 20vw;
+    height: 10vh;
+    text-align: center;
+    transform: translate(-50%, -160%);
+    margin-left: 50vw;
+    border: 2px solid black;
+    border-radius: 1vw;
+    background-color: bisque;
+}
+
+#register_message p {
+    margin-top: 1vh;
+}
+
+#register_message a {
+    font-size: small;
+    color: black;
+    padding: 1vh 1vw;
+    background-color: bisque;
+    border: 2px solid black;
+    font-weight: bold;
+    border-radius: 1vw;
+}
+
+#register_message a:hover {
+    cursor: pointer;
+    background-color: burlywood;
+    box-shadow: 0.25vw 0.5vh 1vh;
 }
