--- a/DWS/UD4/Practica_3/css/chess_game_styles.css
+++ b/DWS/UD4/Practica_3/css/chess_game_styles.css
@@ -351,7 +351,7 @@ thead {
 
 #register_form {
     width: 20vw;
-    height: 40vh;
+    height: 50vh;
     text-align: center;
     transform: translate(-50%, -50%);
     margin-left: 50vw;
@@ -369,8 +369,13 @@ thead {
 
 #register_form label {
     margin: 2vh 0 1vh 0;
-    display: block;
+    display: inline-block;
     font-weight: bold;
+}
+
+#premium {
+    display: inline-block;
+    margin: 4vh 0.5vw 0 0;
 }
 
 .login_form {
@@ -382,6 +387,9 @@ thead {
 
 #psw_button {
     cursor: pointer;
+    display: block;
+    transform: translate(-50%);
+    margin-left: 10vw;
 }
 
 #form_button {
