--- a/DIW/Ejercicios/Ejercicio practico/styles.css
+++ b/DIW/Ejercicios/Ejercicio practico/styles.css
@@ -73,6 +73,7 @@ nav {
     position: absolute;
     right: 5vw;
     text-decoration: none;
+    font-size: 2vh;
 }
 
 .hero a:link {
@@ -120,6 +121,18 @@ nav {
     background-color: cadetblue;
     grid-column: 1/4;
     grid-row: 3/7;
+}
+
+.galeria-grid {
+    display: grid;
+    column-gap: 1vw;
+    grid-template-columns: 33% auto 33%;
+}
+
+.galeria-grid img {
+    width: 100%;
+    max-height: 80%;
+    align-content: center;
 }
 
 #contacto {
