--- a/DWC/Practicas/PRÀCTICA_FINAL_joc_Vazquez_Elier/css/style.css
+++ b/DWC/Practicas/PRÀCTICA_FINAL_joc_Vazquez_Elier/css/style.css
@@ -14,3 +14,18 @@ body {
     background-color: rgba(0, 128, 0, 0.8);
     box-shadow: inset 0 0 100vw 0 black;
 }
+
+#nickname_frame {
+    width: 40vw;
+    height: 40vh;
+    border: 1px solid black;
+    border-radius: 5vw;
+    margin: 30vh 0 0 30vw;
+    position: absolute;
+}
+
+#nickname_form {
+    text-align: center;
+    transform: translate(0, -50%);
+    margin-top: 20vh;
+}
