--- a/DWC/Practicas/PRÀCTICA_FINAL_joc_Vazquez_Elier/css/style.css
+++ b/DWC/Practicas/PRÀCTICA_FINAL_joc_Vazquez_Elier/css/style.css
@@ -35,29 +35,23 @@ body {
     width: 5vw;
     position: relative;
     perspective: 1000px;
-}
-
-.card-box:hover .carta {
-    transform: rotateY(180deg);
-}
-
-td img {
-    height: 15vh;
-    margin: 0.5vh 0.5vw 0.5vh 0.5vw;
     transition: 500ms;
 }
 
 .selected {
     border: 0.3vh solid lightskyblue;
     border-radius: 8px;
-    height: 14.4vh;
-    width: 4.6vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
     transition: 500ms;
 }
 
-.rotate_phase1 {
-    transform: rotateY(90deg);
-    transition: all 500ms linear;
+.carta {
+    height: 15vh;
+    margin: 0.5vh 0.5vw 0.5vh 0.5vw;
+    transition: 500ms;
 }
 
 #juego {
@@ -65,8 +59,33 @@ td img {
     position: absolute;
     top: 50vh;
     left: 50vw;
+    transition: 500ms;
 }
 
 .delante {
-    
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: rotateY(180deg);
+    z-index: 1;
+    transition: 500ms;
+}
+
+.detras {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
+.rotate_delante {
+    position: absolute;
+    left: 0;
+    transform: rotateY(180deg);
+    transition: 500ms;
+}
+
+.rotate_detras {
+    transform: rotateY(180deg);
+    transition: 500ms;
 }
